Add backwards compat output for enterprise license